--- a/notebook test.ipynb
+++ b/notebook test.ipynb
@@ -11,9 +11,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0ab3270-a588-49d0-b296-265a120e1ee6",
+   "metadata": {},
+   "source": [
+    "hi guys"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb0194be-f3f2-48d6-8a19-13418429ce96",
+   "id": "7ea6624b-a679-4701-9b65-eb7b00a085a7",
    "metadata": {},
    "outputs": [],
    "source": []
