Filtered for SD > 2 in Initial Players dataset
filter(played_hours < sd(played_hours)*2)

--- a/notebook test.ipynb
+++ b/notebook test.ipynb
@@ -63,7 +63,7 @@
       "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m      masks \u001b[34mstats\u001b[39m::lag()\n",
       "\u001b[31m✖\u001b[39m \u001b[34myardstick\u001b[39m::\u001b[32mspec()\u001b[39m masks \u001b[34mreadr\u001b[39m::spec()\n",
       "\u001b[31m✖\u001b[39m \u001b[34mrecipes\u001b[39m::\u001b[32mstep()\u001b[39m   masks \u001b[34mstats\u001b[39m::step()\n",
-      "\u001b[34m•\u001b[39m Dig deeper into tidy modeling with R at \u001b[32mhttps://www.tmwr.org\u001b[39m\n",
+      "\u001b[34m•\u001b[39m Learn how to get started at \u001b[32mhttps://www.tidymodels.org/start/\u001b[39m\n",
       "\n",
       "\n",
       "Attaching package: ‘janitor’\n",
@@ -201,13 +201,12 @@
     "\n",
     "player_data <- read_csv(url_players) |>\n",
     "    clean_names()\n",
-    "player_data \n",
-    "\n"
+    "player_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "7ea6624b-a679-4701-9b65-eb7b00a085a7",
    "metadata": {},
    "outputs": [
@@ -215,7 +214,7 @@
      "data": {
       "text/html": [
        "<table class=\"dataframe\">\n",
-       "<caption>A tibble: 196 × 11</caption>\n",
+       "<caption>A tibble: 192 × 11</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>experience</th><th scope=col>subscribe</th><th scope=col>played_hours</th><th scope=col>name</th><th scope=col>gender</th><th scope=col>age</th><th scope=col>Pro</th><th scope=col>Amateur</th><th scope=col>Veteran</th><th scope=col>Beginner</th><th scope=col>Regular</th></tr>\n",
        "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;lgl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
@@ -232,7 +231,7 @@
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 196 × 11\n",
+       "A tibble: 192 × 11\n",
        "\\begin{tabular}{lllllllllll}\n",
        " experience & subscribe & played\\_hours & name & gender & age & Pro & Amateur & Veteran & Beginner & Regular\\\\\n",
        " <chr> & <lgl> & <dbl> & <chr> & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
@@ -248,7 +247,7 @@
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 196 × 11\n",
+       "A tibble: 192 × 11\n",
        "\n",
        "| experience &lt;chr&gt; | subscribe &lt;lgl&gt; | played_hours &lt;dbl&gt; | name &lt;chr&gt; | gender &lt;chr&gt; | age &lt;dbl&gt; | Pro &lt;dbl&gt; | Amateur &lt;dbl&gt; | Veteran &lt;dbl&gt; | Beginner &lt;dbl&gt; | Regular &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|---|---|---|---|---|\n",
@@ -267,17 +266,17 @@
        "2   Veteran     TRUE      3.8         Christian Male              17  0  \n",
        "3   Veteran    FALSE      0.0         Blake     Male              17  0  \n",
        "⋮   ⋮          ⋮         ⋮            ⋮         ⋮                 ⋮   ⋮  \n",
-       "194 Amateur    FALSE     0.0          Dylan     Prefer not to say 17  0  \n",
-       "195 Amateur    FALSE     2.3          Harlow    Male              17  0  \n",
-       "196 Pro         TRUE     0.2          Ahmed     Other             91  1  \n",
+       "190 Amateur    FALSE     0.0          Dylan     Prefer not to say 17  0  \n",
+       "191 Amateur    FALSE     2.3          Harlow    Male              17  0  \n",
+       "192 Pro         TRUE     0.2          Ahmed     Other             91  1  \n",
        "    Amateur Veteran Beginner Regular\n",
        "1   0       0       0        0      \n",
        "2   0       1       0        0      \n",
        "3   0       1       0        0      \n",
        "⋮   ⋮       ⋮       ⋮        ⋮      \n",
-       "194 1       0       0        0      \n",
-       "195 1       0       0        0      \n",
-       "196 0       0       0        0      "
+       "190 1       0       0        0      \n",
+       "191 1       0       0        0      \n",
+       "192 0       0       0        0      "
       ]
      },
      "metadata": {},
@@ -291,11 +290,9 @@
     "           Veteran = ifelse(experience == \"Veteran\", 1, 0),\n",
     "           Beginner = ifelse(experience == \"Beginner\", 1, 0),\n",
     "           Regular = ifelse(experience == \"Regular\", 1, 0)) |>\n",
-    "    select(-individual_id, -hashed_email, -organization_name)\n",
-    "players\n",
-    "\n",
-    "\n",
-    "\n"
+    "    select(-individual_id, -hashed_email, -organization_name) |>\n",
+    "    filter(played_hours < sd(played_hours)*2)\n",
+    "players"
    ]
   },
   {
