--- a/notebook test.ipynb
+++ b/notebook test.ipynb
@@ -1390,6 +1390,33 @@
     "\n",
     "player_plot"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ec07e774-0e9a-473b-9fcd-9fa91a678c04",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ERROR",
+     "evalue": "Error in eval(expr, envir, enclos): object 'h' not found\n",
+     "output_type": "error",
+     "traceback": [
+      "Error in eval(expr, envir, enclos): object 'h' not found\nTraceback:\n"
+     ]
+    }
+   ],
+   "source": [
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a28cfe-73c1-4e87-a3b2-494f70a703ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
