--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -51,6 +51,7 @@
     }
    ],
    "source": [
+    "#Loaded libraries\n",
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
@@ -169,8 +170,8 @@
     }
    ],
    "source": [
+    "#Read data set from URL and used janitor library clean_names() to make names cleaner for future use.\n",
     "url_players <- \"https://drive.google.com/uc?export=download&id=1Mw9vW0hjTJwRWx0bDXiSpYsO3gKogaPz\"\n",
-    "url_sessions <- \"https://drive.google.com/uc?export=download&id=14O91N5OlVkvdGxXNJUj5jIsV5RexhzbB\"\n",
     "\n",
     "player_data <- read_csv(url_players) |>\n",
     "    clean_names()\n",
@@ -257,6 +258,8 @@
     }
    ],
    "source": [
+    "#Wrangled data: Used one-hot encoding to change experience from a categorical variable to a quantitative variable.\n",
+    "#Also removed outliers: played hours that was greater than 2 standard deviations from the mean and ages that were greater than 90 since those were likely falsified.\n",
     "players <- player_data |>\n",
     "    mutate(Pro = ifelse(experience == \"Pro\", 1, 0),\n",
     "           Amateur = ifelse(experience == \"Amateur\", 1, 0),\n",
@@ -272,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "id": "31dddb31-a199-46c0-991c-53dd51fc43c2",
    "metadata": {},
    "outputs": [
@@ -422,6 +425,8 @@
     }
    ],
    "source": [
+    "#Set seed for reproducibility.\n",
+    "#The player data set was split into 75% training, and 25% testing.\n",
     "set.seed(1234)\n",
     "player_split <- initial_split(players, prop = 0.75, strata = played_hours)\n",
     "player_training <- training(player_split)\n",
@@ -2436,14 +2441,6 @@
     "    ggtitle(\"Error vs. True Played Hours\") +\n",
     "    theme(text = element_text(size = 15)) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "876bd8ea-ec5a-4ae0-9b4d-9ba79cf4cd58",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
