added more comments

--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "id": "9fad981d-5bf4-4c1c-9411-6b737f86b80a",
    "metadata": {},
    "outputs": [
@@ -470,6 +470,9 @@
     }
    ],
    "source": [
+    "#Created model for KNN-Regressison with neighbors = tune() so that the ideal k value can be found.\n",
+    "#Created recipe with the desired predictors and scaled all predictors\n",
+    "\n",
     "set.seed(1234)\n",
     "player_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) |> \n",
     "      set_engine(\"kknn\") |>\n",
