--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -730,6 +730,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5afb651b-0a16-4a54-a161-6d610652b4cf",
+   "metadata": {},
+   "source": [
+    "####figure 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "10a72539-8f22-4b6f-9665-a480d91108d2",
@@ -1400,6 +1408,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ad96641-4884-4872-bdff-e406308efef3",
+   "metadata": {},
+   "source": [
+    "####Figure 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "ec07e774-0e9a-473b-9fcd-9fa91a678c04",
@@ -2015,6 +2031,14 @@
     "ggtitle(\"Predicted Hours across Experience Levels\") +\n",
     "theme(text = element_text(size = 15)) \n",
     "player_boxplot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1fbf94d3-86e5-4720-b22f-7f7d82d5b46f",
+   "metadata": {},
+   "source": [
+    "####Figure 3"
    ]
   },
   {
