--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -3013,7 +3013,7 @@
     }
    ],
    "source": [
-    "#Graph showing the error between the true value and the predicted value.\n",
+    "#Graph showing the error (residuals) between the true value and the predicted value.\n",
     "\n",
     "player_Tpreds <- player_best_fit |>\n",
     "    predict(player_testing) |>\n",
