added title and section headers

--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -1,13 +1,46 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "0ace0692-bb03-4e80-ae4b-bf3fef730a95",
+   "metadata": {},
+   "source": [
+    "# Final Project Report\n",
+    "#### Marcus Law, Janesh Tulsan, Winston Tse, Raphael Ysonza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "796efc59-307a-4e1f-9b1a-d4b71d46757e",
+   "metadata": {},
+   "source": [
+    "## Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a4130f1-0b4c-489c-a77f-32f53e40c004",
+   "metadata": {},
+   "source": [
+    "introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a81b647-73c5-44d5-a91e-8ab2d2e03cc8",
+   "metadata": {},
+   "source": [
+    "## Methods"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "ac228cc5-6a0a-4bff-ad1f-daf496f27054",
+   "execution_count": 32,
+   "id": "a79015ea-2f89-4e2b-a645-6de047ccd852",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Loaded libraries\n",
+    "#Loaded libraries necessary for project\n",
     "library(tidyverse)\n",
     "library(repr)\n",
     "library(tidymodels)\n",
@@ -17,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "id": "9252b550-b692-47dd-8b33-0bc228a37a6a",
    "metadata": {},
    "outputs": [
@@ -3031,9 +3064,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9310b52c-c39d-4beb-b074-df888e039688",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a671a7ac-8b5e-442b-935a-47cd497bd0e0",
+   "metadata": {},
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "646d8594-8bdb-4cd4-b72c-68d0d024e1d0",
+   "metadata": {},
+   "source": [
+    "## Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b7c61c7-4854-48ff-beff-f0b5f06bc455",
+   "metadata": {},
+   "source": [
+    "Discussion"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b24b4d9e-1eb4-4458-bf49-caef6e14cc57",
+   "id": "7245819c-b239-4dc4-b9cc-4516c8e5448b",
    "metadata": {},
    "outputs": [],
    "source": []
