--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "0ace0692-bb03-4e80-ae4b-bf3fef730a95",
    "metadata": {},
    "source": [
-    "# Final Project Report\n",
+    "# Project Final Report\n",
     "#### Marcus Law, Janesh Tulsan, Winston Tse, Raphael Ysonza"
    ]
   },
