Copy and Pasted Report from Google Doc

--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -22,7 +22,37 @@
    "id": "0a4130f1-0b4c-489c-a77f-32f53e40c004",
    "metadata": {},
    "source": [
-    "introduction"
+    "We use a dataset named “players” to perform this project. It is a dataset that has information on the players playing minecraft through PLAICRAFT. \"Players\" contains 196 rows, 9 columns, 4 columns being strings, 2 columns being decimal numbers, 3 columns being categorical (T or F) variables. To describe these columns in a thorough sense:\n",
+    "`experience` (Categorical) \n",
+    "- Categorized into: Pro, Veteran, Regular, Amateur, Beginner \n",
+    "- How much prior experience the person has with Minecraft\n",
+    "\n",
+    "`subscribe` (Categorical)\n",
+    "- Either True or False\n",
+    "- If the person subscribed to receive email notifications from Plaicraft\n",
+    "\n",
+    "`hashed_email` (Categorical)\n",
+    "- The person’s email, but for privacy it is hashed out\n",
+    "\n",
+    "`played_hours` (Quantative) \n",
+    "- Hours played in Plaicraft\n",
+    "  \n",
+    "`name` (Categorical) \n",
+    "- Person’s username\n",
+    "  \n",
+    "`gender` (Categorical) \n",
+    "- Person’s gender\n",
+    "  \n",
+    "`age` (Quantative)\n",
+    " - Person's age\n",
+    "   \n",
+    "`individual_id` (Categorical)\n",
+    "- Individual IDs given to players, private information so it is all N/A\n",
+    "\n",
+    "`organization` (Categorical)\n",
+    "- Private information about a person's organization, also all N/A\n",
+    "\n",
+    "In a broad sense, we wanted to know what “kinds” of players are most likely to contribute a large amount of data for PLAICRAFT’s use, so they can optimize their recruiting efforts. Therefore, our technique to find the answer to this question is to find the relationship between playing hours, age and their level of experience with the latter two being our explanatory variables."
    ]
   },
   {
@@ -31,6 +61,14 @@
    "metadata": {},
    "source": [
     "## Methods"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66cdfa34-470d-4e17-af1d-4f9684058c21",
+   "metadata": {},
+   "source": [
+    "To perform this project, we’re employing a multivariate k-nn regression. To get started, we loaded the data and wrangled the data. To effectively use the columns in R, we had to clean the names of the variables to accompany the “_” in between spaces. Furthermore, variables such as individual_id, hashed_email and organization_name were not beneficial in contributing data relevant in answering our question, so we decided to discard them. As we decided to use the k-nn regression model, we needed to convert our experience variable into a dummy variable, so we applied the one hot encoding method, which is a method which converts categorical variables to binary format to use in regressions. We mutated all the values for the experience column into columns for themselves. This method ensures that a column for a particular observation has the value “1” if the attribute is true, “0” otherwise. We started our regression by creating a split for the training data with 0.75 as our proportions and played_hours as our strata. This ensures that the data has the same distribution of played_hours in our training and testing dataset. After creating the split, we quickly defined a training and testing data set. Then, we created the model specification and recipe for the model which defined our variables. We also scaled all the predictors as this model uses distance to identify the closest neighbours so the variables should not have more influence over the other while performing this regression. Next we created a cross validation to determine the optimal k value for our k-nn regression without make assumptions about the distribution of the data. We filtered for the k value with the lowest RMSE to make a recipe and workflow using this determined k value to make predictions on the testing data set. Before creating a visualization, we decide to find the RMSPE to understand the data’s prediction errors. We made three visualizations to clearly show the results of our model. Figure 2 shows the predicted number of hours played shown by the line on the original scatter plot with the true values. Figure 3 is a boxplot, used to understand how the predicted hours played is distributed across the experience levels. Figure 4 shows the error (residuals) between the true value and the predicted value. This helps show how well the model captured the underlying patterns in the data as well as help assess whether the k-nn model is systematically overestimating or underestimating in certain areas."
    ]
   },
   {
@@ -3113,22 +3151,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9310b52c-c39d-4beb-b074-df888e039688",
-   "metadata": {},
-   "source": [
-    "## Results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "a671a7ac-8b5e-442b-935a-47cd497bd0e0",
-   "metadata": {},
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "646d8594-8bdb-4cd4-b72c-68d0d024e1d0",
    "metadata": {},
    "source": [
@@ -3140,16 +3162,64 @@
    "id": "7b7c61c7-4854-48ff-beff-f0b5f06bc455",
    "metadata": {},
    "source": [
-    "Discussion"
+    "#### Summary"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7245819c-b239-4dc4-b9cc-4516c8e5448b",
+   "cell_type": "markdown",
+   "id": "91067316-3912-46d4-97bc-19eb584fec1d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Once again, the objective of this project is to know what types of players contribute most to the given dataset. This was done in exploring the modelled relationship in hours played, quantifying contribution, predicted by age and level of experience. In figure 2, the graph using k-nn regression represented by the blue line showed no clear relationship between hours played, age and player experience. In figure 3, a box plot was used with the categories being the players’ level of experience and the hours played for each level of experience, excluding age as a predictor. It was shown that players that self-identified as having ‘pro’ level experience were, on average, predicted to contribute more hours (around 0.8-1 hour) to the dataset compared to the rest of the levels of experiences, with ‘regular’ being the second highest. The majority of these boxplots didn’t have too much deviation, but amateur players showed a deviation skewed to having more hours played, despite having a lower mean hours played. The third figure highlights that as the predicted hours played increased (with values greater than 1 hour), the accuracy of the model appeared to decrease. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1b3ddaa-0b38-40df-b367-2801eed2a74d",
+   "metadata": {},
+   "source": [
+    "#### Expectations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00488ab3-14e4-410b-9f87-016bd6a4dc0d",
+   "metadata": {},
+   "source": [
+    "Before working on the dataset, the expectations were that players with a lower level of experience such as ‘beginner’  would spend more time playing the game in order to learn and understand it, and players with a significantly higher level of experience such as ‘pro’ and ‘veteran’ would also contribute more playing time to the dataset given that they are familiar with the game. The results of the project somewhat follow these expectations, given that the ‘pro’ level of experience contributed the most to the dataset on average, and the positively skewed distribution of the ‘amateur’ players aligning with these expectations. The ‘veteran’ and ‘beginner’ levels of experience, however, were among the least contributing types of players, with values that deviated much less from the mean compared to other categories. This result contradicts the expectation of higher playing time in these categories. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fc52617-1d15-49e4-a6e5-f121398f00bd",
+   "metadata": {},
+   "source": [
+    "#### Impact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19417fbd-ee9e-47df-9e7d-c283a7e32cfb",
+   "metadata": {},
+   "source": [
+    "Since self-classified amateur and pro players are seen to contribute somewhat more to the dataset than players with different experience, this can be applied to perhaps describe how a player progresses through a certain game, gaining more proficiency with more time spent. The more hours played in ‘amateu’r and ‘pro’ could possibly represent a plateau in skill level, where considerable time and effort is required to progress to the next step, or the competition is significantly more difficult. This information can be important to video game creators, in order to create a more immersive game that challenges a player, but isn’t too difficult to disengage them from the game, thus attracting more players to play the video game. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f982d7-1660-46f5-8647-2a3458144735",
+   "metadata": {},
+   "source": [
+    "#### Further Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4693836-b15c-4569-8cee-99bd7e396b4a",
+   "metadata": {},
+   "source": [
+    "This leads one to ask the question of what other variables in a video game that contribute to the immersion and perceived difficulty of the player, and how these variables can be refined to maximize player contribution in time spent participating. "
+   ]
   }
  ],
  "metadata": {
