fixed break in introduction

--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -22,7 +22,7 @@
    "id": "0a4130f1-0b4c-489c-a77f-32f53e40c004",
    "metadata": {},
    "source": [
-    "We use a dataset named “players” to perform this project. It is a dataset that has information on the players playing minecraft through PLAICRAFT. \"Players\" contains 196 rows, 9 columns, 4 columns being strings, 2 columns being decimal numbers, 3 columns being categorical (T or F) variables. To describe these columns in a thorough sense:\n",
+    "We use a dataset named “players” to perform this project. It is a dataset that has information on the players playing minecraft through PLAICRAFT. \"Players\" contains 196 rows, 9 columns, 4 columns being strings, 2 columns being decimal numbers, 3 columns being categorical (T or F) variables. To describe these columns in a thorough sense: <br>\n",
     "`experience` (Categorical) \n",
     "- Categorized into: Pro, Veteran, Regular, Amateur, Beginner \n",
     "- How much prior experience the person has with Minecraft\n",
